# whatsapp-rust

./: AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: codspeed.yml  main.yml  wasm.yml
agent_docs/: observability.md
examples/: alloc_tracking.rs  benchmark.rs  durability_hook.rs  multi_session_metrics.rs
src/: appstate_sync.rs  bot.rs  cache_config.rs  cache_store.rs  client.rs  download.rs  handshake.rs  http.rs  keepalive.rs  lib.rs  lid_pn_cache.rs  main.rs  message.rs  pair_code.rs  pdo.rs  portable_cache.rs  receipt.rs  reexports_test.rs  request.rs  resend_rate_limiter.rs  retry.rs  send.rs  sender_key_device_cache.rs  spam_report.rs  transport.rs
src/client/: accessors.rs  adapters.rs  app_state.rs  device_registry.rs  device_topology.rs  iq_ops.rs  lifecycle.rs  messaging.rs  node_io.rs  tests.rs  voip.rs
src/features/: comments.rs  community.rs  contacts.rs  events.rs  groups.rs  message_edit.rs  mex.rs  mod.rs  newsletter.rs  polls.rs  presence.rs  profile.rs  reaction.rs
src/handlers/: call.rs  notification.rs
src/message/: dispatch.rs  durability.rs  msg_secret.rs  receive.rs  retry.rs  special.rs  tests.rs
src/send/: mod.rs
src/socket/: error.rs  noise_socket.rs
src/types/: durability_hook.rs  enc_handler.rs  mod.rs
src/voip/: facade.rs  transport.rs
storages/sqlite-storage/: Cargo.toml
storages/sqlite-storage/migrations/2026-06-26-000000_add_pending_inbound_messages/: down.sql  up.sql
storages/sqlite-storage/src/: lib.rs  schema.rs  sqlite_store.rs  wire.rs
tests/: discrepancy_pocs.rs  handshake_integration.rs
tests/bench-integration/: Cargo.toml
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: memory_soak.rs
wacore/: Cargo.toml
wacore/appstate/: Cargo.toml
wacore/appstate/src/: lthash.rs
wacore/benches/: send_receive_benchmark.rs  voip_benchmark.rs
wacore/binary/: Cargo.toml  build.rs
wacore/binary/src/: encoder.rs  jid.rs  token.rs  zlib_pool.rs
wacore/libsignal/benches/: libsignal_benchmark.rs
wacore/libsignal/src/protocol/: sender_keys.rs
wacore/libsignal/src/protocol/state/: session.rs
wacore/src/: appstate_sync.rs  download.rs  history_sync.rs  lib.rs  message_edit.rs  messages.rs  net.rs  pair_code.rs  proto_helpers.rs  reporting_token.rs  request.rs  send.rs  session.rs  stats.rs  upload.rs
wacore/src/client/: context.rs
wacore/src/iq/: contacts.rs  mex.rs  mex_operations.rs  mod.rs  newsletter.rs  spam_report.rs  usync.rs
wacore/src/send/: classify.rs  dm.rs  encrypt.rs  group.rs  peer.rs  resolved_devices.rs  status.rs  tests.rs
wacore/src/stanza/: call.rs
wacore/src/store/: error.rs  in_memory.rs  signal_cache.rs  traits.rs
wacore/src/types/: events.rs  lid_pn.rs  message.rs
wacore/src/voip/: engine.rs  registry.rs  relay_parse.rs
waproto/: build.rs
waproto/src/: lib.rs
