
[package]
name = "whatsapp-rust"
version = "0.6.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
readme = "README.md"
description = "Rust client for WhatsApp Web"

[workspace]
members = [
    ".",
    "http_clients/ureq-client",
    "storages/sqlite-storage",
    "tests/bench-integration",
    "tests/e2e",
    "transports/tokio-transport",
    "wacore",
    "wacore/appstate",
    "wacore/binary",
    "wacore/derive",
    "wacore/libsignal",
    "wacore/noise",
    "waproto",
]
default-members = [
    ".",
    "http_clients/ureq-client",
    "storages/sqlite-storage",
    "transports/tokio-transport",
    "wacore",
    "wacore/appstate",
    "wacore/binary",
    "wacore/derive",
    "wacore/libsignal",
    "wacore/noise",
    "waproto",
]

[workspace.lints.clippy]
# Force the wacore::time abstraction so WASM/deterministic-test builds don't
# regress. Exceptions carry `#[allow(clippy::disallowed_methods)]` inline.
disallowed_methods = "deny"

[workspace.dependencies]
# Shared dependencies
aes = "0.9.0"
aes-gcm = { version = "0.11.0-rc.3", default-features = false, features = ["aes", "alloc", "bytes"] }
anyhow = { version = "1.0", default-features = false }
async-channel = { version = "2.5.0", default-features = false, features = ["std"] }
async-lock = { version = "3", default-features = false }
async-trait = "0.1.89"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bytemuck = { version = "1.22", default-features = false }
bytes = { version = "1.5", default-features = false }
chrono = { version = "0.4", default-features = false }
compact_str = { version = "0.9", default-features = false }
ctr = { version = "0.10", default-features = false }
env_logger = { version = "0.11", default-features = false }
event-listener = { version = "5", default-features = false }
flate2 = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
getrandom = { version = "0.4", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hkdf = { version = "0.13.0", default-features = false }
hmac = { version = "0.13.0", default-features = false }
iai-callgrind = "0.16"
itoa = "1"
log = "0.4"
metrics = "0.24"
portable-atomic = { version = "1", default-features = false, features = ["fallback"] }
prost = { version = "0.14.4", default-features = false, features = ["std"] }
prost-build = { version = "0.14.3", default-features = false }
rand = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-big-array = "0.5"
serde_json = { version = "1.0", default-features = false }
sha1 = { version = "0.11.0", default-features = false }
sha2 = { version = "0.11.0", default-features = false }
subtle = { version = "2.6", default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
uuid = { version = "1", default-features = false }

# Internal workspace crates
wacore = { path = "./wacore", default-features = false, version = "0.6.0" }
wacore-appstate = { path = "./wacore/appstate", default-features = false, version = "0.6.0" }
wacore-binary = { path = "./wacore/binary", default-features = false, version = "0.6.0" }
wacore-derive = { path = "./wacore/derive", version = "0.6.0" }
wacore-libsignal = { path = "./wacore/libsignal", version = "0.6.0" }
wacore-noise = { path = "./wacore/noise", version = "0.6.0" }
waproto = { path = "./waproto", version = "0.6.0" }
yoke = { version = "0.8", features = ["derive"] }

[features]
debug-diagnostics = ["wacore/debug-diagnostics"]
debug-snapshots = ["wacore/debug-snapshots"]
# Optional observability. Off by default: no `tracing` dep, zero overhead.
# Emits tracing spans/events only; the application installs the subscriber
# (and any OpenTelemetry bridge). See examples/observability.rs.
tracing = ["dep:tracing", "wacore/tracing"]
# Optional metrics (counters/histograms/gauges via the `metrics` facade). Off by
# default: no dependency, zero overhead. Emits only; the application installs a
# recorder (e.g. metrics-exporter-prometheus). See examples/metrics.rs.
metrics = ["wacore/metrics"]
# Render raw phone numbers in tracing fields instead of the redacted `pn#<hash>`.
# Local debugging only; never enable in production.
tracing-pii = ["wacore/tracing-pii", "wacore-binary/tracing-pii"]
danger-skip-tls-verify = ["whatsapp-rust-tokio-transport?/danger-skip-tls-verify"]
danger-skip-cert-chain-verify = ["wacore/danger-skip-cert-chain-verify"]
default = [
    "moka-cache",
    "simd",
    "sqlite-storage",
    "tokio-transport",
    "tokio-runtime",
    "ureq-client",
    "tokio-native",
    "signal",
]
moka-cache = ["dep:moka"]
simd = ["wacore/simd"]
ureq-client = ["dep:whatsapp-rust-ureq-http-client"]
tokio-transport = ["dep:whatsapp-rust-tokio-transport"]
tokio-runtime = ["dep:tokio"]
signal = ["tokio-runtime", "tokio/signal"]
sqlite-storage = ["whatsapp-rust-sqlite-storage"]
tokio-native = ["tokio-runtime", "tokio/rt-multi-thread"]

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
env_logger = { workspace = true }
event-listener = { workspace = true }
futures = { workspace = true, features = ["std"] }
hex = { workspace = true }
itoa = { workspace = true }
log = { workspace = true }
portable-atomic = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
scopeguard = "1.2"
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"], optional = true }
tracing = { workspace = true, optional = true }
wacore = { workspace = true }
wacore-binary = { workspace = true }
waproto = { workspace = true }
whatsapp-rust-sqlite-storage = { path = "./storages/sqlite-storage", version = "0.6.0", optional = true }
whatsapp-rust-tokio-transport = { path = "./transports/tokio-transport", version = "0.6.0", optional = true }
whatsapp-rust-ureq-http-client = { path = "./http_clients/ureq-client", version = "0.6.0", optional = true }

# wasm32-unknown-unknown has no default getrandom backend, so make the browser
# one available (the only valid choice there) to build the crate standalone:
# CI wasm guard + downstream consumers like whatsapp-rust-bridge. Gated to the
# unknown-unknown triple per getrandom's guidance so wasm32-wasi/emscripten keep
# their own backends and don't pull wasm-bindgen/js-sys. Backend is still
# selected via `--cfg getrandom_backend="wasm_js"` in RUSTFLAGS; no native effect.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

# moka is thread-based (crossbeam/uuid) and does not build on wasm32, so it is
# scoped to non-wasm targets. The `moka-cache` feature can still be enabled on
# wasm32 (it stays in `default`); `dep:moka` is simply inert there and the cache
# falls back to PortableCache via the target gate in src/cache.rs.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
moka = { version = "0.12.12", features = ["future"], optional = true }

[dev-dependencies]
aes = { workspace = true }
cbc = { version = "0.2", features = ["alloc", "block-padding"] }
flate2 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
metrics-exporter-prometheus = "0.16"
sha2 = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
wacore-noise = { path = "./wacore/noise", features = [
    "test-util",
    "danger-skip-cert-chain-verify",
] }

[lints]
workspace = true

[[example]]
name = "benchmark"
required-features = ["danger-skip-tls-verify"]

[[example]]
name = "observability"
required-features = ["tracing"]

[[example]]
name = "metrics"
required-features = ["metrics"]

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false

# Benchmark profile: optimized but without aggressive LTO that breaks iai-callgrind
[profile.bench]
inherits = "release"
lto = "thin"
debug = 1
strip = false

# Profiling: optimized with debug symbols for DHAT / heaptrack / perf
[profile.profiling]
inherits = "release"
debug = 1
strip = false
