[package]
name = "e2e-tests"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata.cargo-shear]
ignored = ["dhat"]

[features]
dhat-heap = ["dep:dhat"]

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
dhat = { version = "0.3", optional = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { workspace = true, features = ["v4"] }
wacore = { path = "../../wacore" }
wacore-binary = { path = "../../wacore/binary" }
whatsapp-rust = { path = "../..", default-features = false, features = [
  "danger-skip-cert-chain-verify",
  "danger-skip-tls-verify",
  "simd",
  "tokio-runtime",
  "tokio-native",
  "signal",
] }
whatsapp-rust-tokio-transport = { path = "../../transports/tokio-transport", features = [
  "danger-skip-tls-verify",
] }
whatsapp-rust-ureq-http-client = { path = "../../http_clients/ureq-client", features = [
  "danger-skip-tls-verify",
] }

[dev-dependencies]
buffa = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
