[package]
name = "wacore-binary"
version = "0.6.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Binary data and constants for WhatsApp protocol"

[package.metadata.cargo-shear]
ignored = ["hashify"]

# `hashify` is used only through its lookup macros, so static analysers miss it.
[package.metadata.cargo-machete]
ignored = ["hashify"]

[lib]
crate-type = ["rlib"]

[features]
default = ["simd"]
simd = []
serde = ["dep:serde", "compact_str/serde", "smallvec/serde"]
# Render raw phone numbers in `Jid::observe()` instead of the redacted `pn#<hash>`.
# Local debugging only; never enable in production.
tracing-pii = []

[dependencies]
bytes = { workspace = true }
compact_str = { workspace = true }
hashify = { version = "0.2.9", default-features = false }
itoa = { workspace = true }
serde = { workspace = true, optional = true }
smallvec = "1.15"
smoothutf8 = { workspace = true }
stable_deref_trait = "1.2.1"
yoke = { workspace = true }
zlib-rs = { workspace = true }

[build-dependencies]
serde = { workspace = true, features = ["alloc"] }
serde_json = { workspace = true, features = ["std"] }

[dev-dependencies]
divan = { workspace = true }
flate2 = { workspace = true }
proptest = "1.11.0"
serde_json = { workspace = true, features = ["std"] }

[[bench]]
name = "binary_benchmark"
harness = false

[[bench]]
name = "jid_benchmark"
harness = false

[lints]
workspace = true
